--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,41 +1,17 @@
-version: '3.5'
-
+version: "3"
 services:
-  postgres:
-    container_name: postgres_container
-    image: postgres
-    environment:
-      POSTGRES_USER: ${POSTGRES_USER:-postgres}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-changeme}
-      PGDATA: /data/postgres
+  notebook:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    working_dir: /home
     volumes:
-       - postgres:/data/postgres
+      - ./work:/home/jovyan/work
     ports:
-      - "5433:5433"
+      - 8001:8001
+    container_name: jupyter_notebook
+    command: "jupyter notebook --no-browser --port=8001 --ip=0.0.0.0"
     networks:
-      - postgres
-    restart: unless-stopped
-  
-  pgadmin:
-    container_name: pgadmin_container
-    image: dpage/pgadmin4
-    environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-pgadmin4@pgadmin.org}
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
-      PGADMIN_CONFIG_SERVER_MODE: 'False'
-    volumes:
-       - pgadmin:/var/lib/pgadmin
-
-    ports:
-      - "${PGADMIN_PORT:-5050}:80"
-    networks:
-      - postgres
-    restart: unless-stopped
-
+      - notebook
 networks:
-  postgres:
-    driver: bridge
-
-volumes:
-    postgres:
-    pgadmin:
+  notebook:
